--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <nav>
-            <ul><li><a href=""> Home</a></li>
-            <li><a href=""> about busmall</a></li>
+            <ul><li><a href="#"> Home</a></li>
+            <li><a href="#"> about busmall</a></li>
         </ul>
         </nav>
         <h1>BUS MALL</h1>
@@ -22,8 +22,9 @@
             <img src="" alt="" title="" id="centerimg">
             <img src="" alt="" title="" id="leftimg">
         </section>
+        <canvas id="myChart" width="300" height="300"></canvas>
     </main>
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
